--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
+.App {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
+.fa-otter {
+  font-size: 60px;
+  margin-left: 100px;
+  margin-bottom: 10px;
+  color: blueviolet;
+}
+
+.NavBar h3 {
+  margin-right: 50px;
+}
